--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
     "name": "digo-tslint",
     "version": "0.0.1",
-    "repository": "http://github.com/digojs/digo-clean-css",
-    "description": "digo 插件：使用 TSLint 检测 TypeScript 代码",
+    "repository": "http://github.com/digojs/digo-tslint",
+    "description": "digo 插件：使用 TSLint 检查 TypeScript 代码",
     "keywords": [
-        "digo-plugin",
-        "minify css",
-        "compress css"
+        "digo-plugin"
     ],
     "license": "MIT",
     "author": "xuld <xuld@vip.qq.com>",
